--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^3.0.2",
+    "zod": "^4.1.12",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
