fix: Correção de erros CSP e MIME types em produção
- Remove feature 'interest-cohort' não reconhecida do Permissions-Policy
- Adiciona suporte para scripts do Vercel Live no CSP
- Permite data: URIs para scripts inline necessários
- Configura MIME types corretos para CSS (text/css) e JS (application/javascript)
- Elimina violações de Content Security Policy
- Mantém segurança sem quebrar funcionalidade do Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,24 @@
   },
   "headers": [
     {
+      "source": "/(.*)\\.(js|jsx|ts|tsx)$",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.(css)$",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css; charset=utf-8"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         {
@@ -31,7 +49,7 @@
         },
         {
           "key": "Permissions-Policy",
-          "value": "camera=(), microphone=(), geolocation=(), interest-cohort=()"
+          "value": "camera=(), microphone=(), geolocation=()"
         },
         {
           "key": "Strict-Transport-Security",
@@ -39,7 +57,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://trae-api-us.mchost.guru; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://trae-api-us.mchost.guru https://vercel.live; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
         }
       ]
     },
