--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,20 @@
   },
   "headers": [
     {
-      "source": "/(.*)\\.(js|jsx|ts|tsx)$",
+      "source": "/(.*)\\.(js|jsx|ts|tsx|mjs)$",
       "headers": [
         {
           "key": "Content-Type",
-          "value": "application/javascript; charset=utf-8"
+          "value": "text/javascript; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)\\.(js|jsx|ts|tsx|mjs)$",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/javascript; charset=utf-8"
         }
       ]
     },
@@ -25,6 +34,19 @@
         {
           "key": "Content-Type",
           "value": "text/css; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/site.webmanifest",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
         }
       ]
     },
@@ -57,7 +79,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://trae-api-us.mchost.guru https://vercel.live; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live https://*.vercel.app; script-src-elem 'self' 'unsafe-inline' data: blob: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live https://*.vercel.app; style-src 'self' 'unsafe-inline' data: https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://trae-api-us.mchost.guru https://vercel.live https://*.vercel.app; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
         }
       ]
     },
