--- a/vercel.json
+++ b/vercel.json
@@ -79,7 +79,7 @@
         },
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live https://*.vercel.app; script-src-elem 'self' 'unsafe-inline' data: blob: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live https://*.vercel.app; style-src 'self' 'unsafe-inline' data: https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://trae-api-us.mchost.guru https://vercel.live https://*.vercel.app; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live https://*.vercel.app https://*.vercel.com; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdn.jsdelivr.net https://unpkg.com https://vercel.live https://*.vercel.app https://*.vercel.com; style-src 'self' 'unsafe-inline' data: https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://*.supabase.co https://trae-api-us.mchost.guru https://vercel.live https://*.vercel.app https://*.vercel.com; frame-ancestors 'none'; base-uri 'self'; form-action 'self'"
         }
       ]
     },
