--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "rollup-plugin-visualizer": "^6.0.5",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.17",
     "terser": "^5.44.0",
     "typescript": "~5.8.3",
