--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   },
   "rewrites": [
     {
-      "source": "/((?!api|_next|_static|favicon.ico|robots.txt|site.webmanifest|sw.js|offline.html|assets).*)",
+      "source": "/((?!api|_next|_static|favicon.ico|robots.txt|sitemap.xml|site.webmanifest|sw.js|offline.html|assets).*)",
       "destination": "/index.html"
     }
   ],
@@ -49,6 +49,32 @@
         {
           "key": "Content-Type",
           "value": "application/manifest+json; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        }
+      ]
+    },
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    },
+    {
+      "source": "/robots.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain; charset=utf-8"
         },
         {
           "key": "Cache-Control",
