--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
   },
   "rewrites": [
     {
-      "source": "/((?!api|_next|_static|favicon.ico|robots.txt|sitemap.xml|site.webmanifest|sw.js|offline.html|assets).*)",
+      "source": "/sitemap.xml",
+      "destination": "/api/sitemap"
+    },
+    {
+      "source": "/((?!api|_next|_static|favicon.ico|robots.txt|site.webmanifest|sw.js|offline.html|assets).*)",
       "destination": "/index.html"
     }
   ],
