fix: Correct sitemap rewrite destination to /api/sitemap.xml

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "rewrites": [
     {
       "source": "/sitemap.xml",
-      "destination": "/api/sitemap"
+      "destination": "/api/sitemap.xml"
     },
     {
       "source": "/((?!api|_next|_static|favicon.ico|robots.txt|site.webmanifest|sw.js|offline.html|assets).*)",
