--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "@types/dompurify": "^3.0.5",
+    "@types/nodemailer": "^7.0.3",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -20,6 +21,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "lucide-react": "^0.511.0",
+    "nodemailer": "^7.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
