--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@types/dompurify": "^3.0.5",
     "@types/nodemailer": "^7.0.3",
+    "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.511.0",
     "nodemailer": "^7.0.10",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.1.0",
