feat(analytics): GA4 pronto para deploy  endpoint /api/analytics/web-vitals (Measurement Protocol), variáveis de ambiente e ajustes no cliente/preview local

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,26 @@
-# Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+# Variáveis de exemplo para desenvolvimento e produção
 
-# Example:
-# VITE_SUPABASE_URL=https://your-project-id.supabase.co
-# VITE_SUPABASE_ANON_KEY=your_anon_key_here
+# Vite (frontend)
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
+
+# Vercel (frontend em produção)
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Universais (server-side)
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# Sistema de Alertas
+ENVIRONMENT=production
+RESEND_API_KEY=
+
+# Google Analytics 4 (Measurement Protocol)
+GA4_MEASUREMENT_ID=
+GA4_API_SECRET=
+
+# Alternativa para testes locais com Vite (caso preferir)
+VITE_GA4_MEASUREMENT_ID=
+VITE_GA4_API_SECRET=
