--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:perf": "node scripts/build-performance.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "check": "tsc -b --noEmit"
