--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,49 @@
   ],
   "headers": [
     {
+      "source": "/sw.js",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
+      ]
+    },
+    {
+      "source": "/index.html",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" },
+        { "key": "Timing-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
+      "source": "/js/(.*)",
+      "headers": [
+        { "key": "Content-Type", "value": "text/javascript; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "Timing-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
+      "source": "/css/(.*)",
+      "headers": [
+        { "key": "Content-Type", "value": "text/css; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "Timing-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
+      "source": "/assets/(.*)\.(png|jpg|jpeg|gif|webp|avif|svg|ico)$",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "Timing-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
+      "source": "/(.*)\.(woff|woff2|ttf|eot|otf)$",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
+        { "key": "Timing-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
       "source": "/(.*)\\.(js|jsx|ts|tsx|mjs)$",
       "headers": [
         {
