--- a/vercel.json
+++ b/vercel.json
@@ -46,14 +46,14 @@
       ]
     },
     {
-      "source": "/assets/(.*)\.(png|jpg|jpeg|gif|webp|avif|svg|ico)$",
+      "source": "/assets/(.*)\\.(png|jpg|jpeg|gif|webp|avif|svg|ico)$",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
         { "key": "Timing-Allow-Origin", "value": "*" }
       ]
     },
     {
-      "source": "/(.*)\.(woff|woff2|ttf|eot|otf)$",
+      "source": "/(.*)\\.(woff|woff2|ttf|eot|otf)$",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
         { "key": "Timing-Allow-Origin", "value": "*" }
