feat(comments): Fase 1–4 UX/anti-spam + menções
Ocultar 'Responder' no próprio comentário

Chip 'Respondendo a Nome', autofoco e rolagem

Persistência de ordenação por artigo

Contagem de respostas inicial e estável

Auto-salvar rascunhos por articleId+parentId

A11y (ARIA, teclado, foco)

Menções com autocomplete (thread/local + globais)

Rate limit frontend (8s, 3/min, 10/h)

Nome exibido persistente (user_profiles + auth metadata)

Validação de duplicados recentes e RPC placeholders

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build:perf": "node scripts/build-performance.js",
     "lint": "eslint .",
     "preview": "vite preview",
-    "check": "tsc -b --noEmit"
+    "check": "tsc -b --noEmit",
+    "setup-google-oauth": "node scripts/setup-google-oauth.js",
+    "google-oauth-wizard": "node scripts/google-oauth-wizard.js",
+    "google-oauth-quick": "node scripts/google-oauth-quick.js",
+    "check-auth": "node scripts/check-auth.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
