OAuth Google: usar SITE_URL; CORS/segurança com domínios de produção; redirect canônico Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,15 @@
   "installCommand": "npm install",
   "devCommand": "npm run dev",
 
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [{ "type": "host", "value": "aimindset.com.br" }],
+      "destination": "https://www.aimindset.com.br/$1",
+      "permanent": true
+    }
+  ],
+
   "rewrites": [
     {
       "source": "/sitemap.xml",
